k8s/ingress.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-gateway-ingress
  namespace: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-cloud-gateway-ingress
  template:
    metadata:
      labels:
        app: spring-cloud-gateway-ingress
    spec:
      serviceAccountName: spring-cloud-gateway-ingress
      containers:
      - image: localhost:5000/spring-cloud-gateway-ingress
        imagePullPolicy: Always
        name: spring-cloud-gateway
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "300Mi"
          requests:
            memory: "300Mi"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 180
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
---
kind: Service
apiVersion: v1
metadata:
  name: spring-cloud-gateway-ingress
  namespace: ingress
  labels:
    app: spring-cloud-gateway-ingress
spec:
  selector:
    app: spring-cloud-gateway-ingress
  ports:
  - protocol: TCP
    port: 8080
    name: http
